# VoxelEngine

./: .gitignore  CMakeLists.txt
assets/: 4x4 Truck.vox  Crate.vox  Earth.vox  castle.vox  teapot.vox  untitled.vox
shaders/: comp.glsl  raymarchingF.glsl
src/: AABB.hpp  Manager.cpp  Manager.hpp  Object.hpp  PhysicsComponent.cpp  PhysicsComponent.hpp  PhysicsWorld.cpp  PhysicsWorld.hpp  Ray.hpp  Scene.hpp  StaticGrid.hpp  UI.hpp  Voxel.hpp  VoxelModifier.cpp  main.cpp  scene.cpp
src/NetCode/: CallBacks.hpp  NetWork.cpp  NetWork.hpp
src/Player/: Player.cpp  Player.hpp  PlayerController.hpp
src/Scene/: Manager.cpp  Manager.hpp  PhysicsWorld.cpp  PhysicsWorld.hpp  Scene.hpp  scene.cpp
src/UI/: UI.hpp
src/VoxelObject/: Object.hpp  Voxel.hpp  VoxelModifier.cpp  VoxelModifier.hpp
src/renderer/: ShaderProgram.cpp  ShaderProgram.hpp  camera.cpp  camera.hpp
src/utils/: JPH_glm.hpp  PrintVec.hpp
